src/tests/fail-break-in-as-variable.err
Fatal error: exception Eqeq.Error("line 2 (char 7): 'break'")
