src/tests/fail-break-in-as-variable.eq
SomeContext = {
  break = { 1; }
}
SomeContext:find break {
  if ( break==1){
  break = 3;
 }
}
